# update-shell-utils

./: .gitignore  .golangci.yml  .travis.yml  Cargo.toml  Gopkg.toml  README.md  go.mod  go.sum  install.sh  update_shell_utils.go
.circleci/: config.yml
src/: main.rs
